css/index.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:wght@400;500&display=swap');

:root {
  --font-base: 'Work Sans', sans-serif;
  --font-heading: 'Krona One', sans-serif;
  --color-white: #fff;
  --color-grey: #777;
  --color-lightgrey: #DDD;
  --color-darkgrey: #222;
  --color-tint: #f2f2f2;
  --color-accent: #b55e95;
}

* {
  box-sizing: border-box;
}
html,
body {
  background-color: var(--color-tint);
  color: var(--color-darkgrey);
  font-family: var(--font-base);
  font-size: 16px;
  font-weight: 400;
  line-height: 1.6em;
  margin: 0;
  padding: 0;
}
p {
  padding: 0;
  margin: 0 0 2em;
  max-width: 32em;
}
p.bump {
  font-size: 1.6em;
  line-height: 1.6em;
}
p.small {
  font-size: .8em;
}
h1,
h2,
h3,
h4,
h5 {
  color: var(--color-darkgrey);
  font-family: var(--font-heading);
  font-weight: 400;
  line-height: 1.6em;
  max-width: 20em;
}
h1 {
  font-size: 1.6em;
  margin: 0 0 1em;
}
h1.bump {
  font-size: 2em;
}
h2 {
  font-size: 1.2em;
  margin: 0 0 1em;
}
h3 {
  font-size: 1em;
  margin: 0 0 1em;
}
h4 {
  font-size: 1em;
  font-weight: bold;
  padding-bottom: 0;
  margin: 0 0 .75em;
}
h5,
cite,
small {
  font-size: .75em;
  color: var(--color-grey);
  margin: 0 0 .5em;
}
img {
  max-width: 100%;
  height: auto;
}
figure {
  margin: 0 0 1.5em;
}
figcaption {
  background: var(--color-darkgrey);
  color: var(--color-white);
  display: inline-block;
  font-size: .75em;
  line-height: 1em;
  padding: 4px 8px;
}
a[href] {
  color: var(--color-accent);
  font-weight: 500;
}
header:after {
  content: "";
  display: table;
  clear: both;
}
table {
  margin: 1em 0;
}
table td,
table th {
  padding-right: 1em;
}
pre,
code {
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}
blockquote {
  position: relative;
  font-style: italic;
}
blockquote p:before,
blockquote p:after {
  color: var(--color-lightgrey);
  font-size: 3em;
  font-style: normal;
  line-height: 1em;
  position: absolute;
}
blockquote p:before {
  content: open-quote;
  margin-left: -32px;
}
blockquote p:after {
  content: close-quote;
  margin-left: 8px;
}
.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none;
  color: inherit;
}

.highlight-line:empty:before {
  content: " ";
}
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Utilities */
.list-reset {
  list-style: none;
  margin: 0;
  padding: 0;
}
.margin-reset {
  margin: 0;
}

/* Components */
ul:not([class]) {
  line-height: 2em;
  list-style-type: none;
  margin: 0 0 1.5em;
  padding-left: 1em;
}
ul:not([class]) li:before {
  content: "";
  display: inline-block;
  vertical-align: middle;
  margin-top: -.25em;
  background-color: #000;
  width: 8px;
  height: 8px;
  margin-right: 8px;
  margin-left: -16px;
}

.pie-chart h2 {
  font-size: 1em;
}
.pie-chart cite {
  padding-bottom: .1em !important;
}

/* Header */
header#masthead {
  background-color: var(--color-lightgrey);
  padding: 0 16px;
}

/* Logo */
.logo {
  display: inline-block;
  font-family: var(--font-heading);
  color: var(--font-accent);
  background: -webkit-linear-gradient(43deg, #ff2323 0%, #b55e95 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-size: 1.2em;
  font-weight: 400;
  text-decoration: none;
  line-height: 1.4em;
  margin: 16px 32px 8px 0;
}

/* Nav */
nav {
  display: inline-block;
}
nav ul.nav {
  list-style: none;
  margin: 0 -16px 8px;
  padding: 0;
}
nav ul.nav .nav-item {
  display: inline-block;
  margin: 0 8px;
}
nav ul.nav .nav-item a {
  padding: 8px;
  display: inline-block;
}
nav ul.nav .nav-item a[href]:not(:hover) {
  text-decoration: none;
}
nav ul.nav .nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
ul.postlist {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  list-style: none;
  margin-left: -1em;
  margin-right: -1em;
}
ul.postlist li.postlist-item-card {
  background: #fff;
  display: flex;
  margin: 0 1em 2em 1em;
  overflow: hidden;
  -webkit-transition: all .5s;
  transition: all .5s;
  padding-bottom: 1em;
}
ul.postlist li.postlist-item-card a {
  background: var(--color-white);
  color: initial;
  display: flex;
  flex: auto;
  font-weight: initial;
  text-decoration: none;
}
ul.postlist li.postlist-item-card .postlist-item-content {
  display: flex;
  flex-direction: column;
}
ul.postlist li.postlist-item-card .postlist-item-content img {
  margin-bottom: 1em;
}
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-title,
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-description,
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-tags {
  display: block;
  padding: 0 1em;
}
ul.postlist li.postlist-item-card .postlist-item-content .postlist-item-tags {
  margin-top: auto;
}

/* Post */
.brattco-post {
  overflow: hidden;
}
.brattco-post .container {
  margin: 0 auto;
  max-width: 800px;
  width: 100%;
}
.brattco-post .container figure {
  max-width: 1000px;
  width: 100%;
}

/* Tags */
.post-tag {
  display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
  line-height: 1em;
  padding: 8px;
  margin-left: 8px;
  background-color: var(--color-darkgrey);
  color: var(--color-white);
  border-radius: 4px;
  text-decoration: none;
}
a[href].post-tag,
a[href].post-tag:visited {
  color: #fff;
}

.tags .tag::after {
    content: ", ";
}
.tags .tag:last-of-type::after {
    content: "";
    margin: 0;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

/* Structure */
main {
  padding: 0 16px;
}
.container {
  max-width: 1300px;
  margin: 0 auto;
}
.page-content {
  padding-top: 32px;
}

@media screen and (min-width: 480px) {
  ul.postlist {
    grid-template-columns: repeat(2,1fr);
  }
}

@media screen and (min-width: 1000px) {
  body,
  html {
    font-size: 1.2em;
  }
  .brattco-post .container figure img {
    margin-left: -20%;
    max-width: 1200px;
    width: 140%;
  }
  ul.postlist {
    grid-template-columns: repeat(3,1fr);
  }
}

